Added permutation test

--- a/CVM Conversion criterions.ipynb
+++ b/CVM Conversion criterions.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c96a948e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2c4977d0",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
     "    - Двухвыборочный T-тест Уэлча (Welch's T-test)\n",
     "3. Сравнение малых конверсий между группами:\n",
     "    - Точный тест Фишера (Fisher's Exact Test)\n",
-    "    - Бутстрап (Bootstrap) (применим ко всем трём задачам)"
+    "    - Бутстрап (Bootstrap) и Тест перестановок (применим ко всем трём задачам)"
    ]
   },
   {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "aeccf4a9",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "da7771d3",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "898b8988",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "16455441",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "bf9a201f",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "d95f15d2",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
    "source": [
     "**Тренировочная задача №3**\n",
     "\n",
-    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 5 тысяч клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 328 клиентов, а в экспериментальной - 472 клиента.\n",
+    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 5 тысяч клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 328 клиентов, а в экспериментальной - 385 клиента.\n",
     "\n",
     "**Задача:** сравнить конверисю в экспериментальной группе ($p_1$) с конверсией в контрольной группе ($p_2$) при помощи **Z-теста для пропорций** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
     "\n",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "b4c10834",
    "metadata": {},
    "outputs": [],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "0da36927",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "9834126a",
    "metadata": {},
    "outputs": [
@@ -617,6 +617,7 @@
     "\n",
     "$$\n",
     "t \\sim T_{\\nu} \\\\\n",
+    "\\\\\n",
     "\\nu = \\frac{(\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2})^2}{\\frac{s_1^4}{n_1^2 \\times (n_1 - 1)} + \\frac{s_2^4}{n_2^2 \\times (n_2 - 1)}}\n",
     "$$\n",
     "\n",
@@ -648,7 +649,7 @@
     "\n",
     "Возьмём условие **тренировочной задачи №3**, но теперь для сравнения используем **Двухвыборочный Т-тест Уэлча**. **Двухвыборочный Т-тест Уэлча** может быть применён так как $n = 5000$ (достаточно велико для применения ЦПТ).\n",
     "\n",
-    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 5 тысяч клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 328 клиентов, а в экспериментальной - 472 клиента.\n",
+    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 5 тысяч клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 328 клиентов, а в экспериментальной - 385 клиента.\n",
     "\n",
     "**Задача:** сравнить конверисю в экспериментальной группе ($\\mu_1 = p_1$) с конверсией в контрольной группе ($\\mu_2 = p_2$) при помощи **Двухвыборочного Т-теста Уэлча** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
     "\n",
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "64f0532c",
    "metadata": {},
    "outputs": [],
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "a5ca6e9d",
    "metadata": {},
    "outputs": [
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "0da26801",
    "metadata": {},
    "outputs": [
@@ -840,7 +841,7 @@
    "source": [
     "**Тренировочная задача №5**\n",
     "\n",
-    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 1 тысяча клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 8 клиентов, а в экспериментальной - 14 клиентов.\n",
+    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 1 тысяча клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 8 клиентов, а в экспериментальной - 21 клиент.\n",
     "\n",
     "**Задача:** сравнить конверисю в экспериментальной группе ($p_1$) с конверсией в контрольной группе ($p_2$) при помощи **Точного теста Фишера** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
     "\n",
@@ -865,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "837f5f8e",
    "metadata": {},
    "outputs": [],
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "3b5a2dd7",
    "metadata": {},
    "outputs": [
@@ -910,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "9d92ad94",
    "metadata": {},
    "outputs": [
@@ -963,32 +964,178 @@
    "source": [
     "### 1.3.2. Сравнение малых конверсий между группами. **Бутстрап (Bootstrap)**\n",
     "\n",
-    "..."
+    "#### Проверяемые гипотезы (двусторонняя гипотеза)\n",
+    "$$\n",
+    "H_0: \\theta_1 = \\theta_2 \\\\\n",
+    "H_1: \\theta_1 <> \\theta_2\n",
+    "$$\n",
+    "где $\\theta_1$ - значение метрики (любой) в экспериментальной группе, $\\theta_2$ - значение метрики (любой) в контрольной группе\n",
+    "\n",
+    "#### Условия применимости критерия\n",
+    "1. Независимость наблюдений\n",
+    "\n",
+    "#### Статистика критерия\n",
+    "Пусть\n",
+    "- $\\hat{\\theta_1}$ - значение метрики в экспериментальной группе,\n",
+    "- $\\hat{\\theta_2}$ - значение метрики в контрольной группе.\n",
+    "\n",
+    "Статистикой критерия является:\n",
+    "\n",
+    "$$\n",
+    "T_{obs} = \\hat{\\theta_1} - \\hat{\\theta_2}\n",
+    "$$\n",
+    "\n",
+    "Дальше:\n",
+    "1. Строим бутстрап-распределение разницы (либо непараметрический перестановочный тест / permutation test).\n",
+    "2. Оцениваем, насколько наблюдаемое T экстремально.\n",
+    "Делаем permutation test (перемешиваем ярлыки групп, чтобы смоделировать $H_0$ \"нет разницы\")\n",
+    "\n",
+    "Распределение статистики выстраиваем эмпирически.\n",
+    "\n",
+    "#### Расчёт p-value\n",
+    "$p-value$ (вероятность получить такое же или более экстремальное значение статистики) равно:\n",
+    "\n",
+    "Для двусторонней альтернативы:\n",
+    "$$\n",
+    "p = \\frac{\\sum I(|T| \\ge |T_{obs}|)}{количество \\space перестановок}\n",
+    "$$\n",
+    "\n",
+    "Для односторонней альтернативы (больше):\n",
+    "$$\n",
+    "p = \\frac{\\sum I(T \\ge T_{obs})}{количество \\space перестановок}\n",
+    "$$\n",
+    "\n",
+    "Для односторонней альтернативы (меньше):\n",
+    "$$\n",
+    "p = \\frac{\\sum I(T \\le T_{obs})}{количество \\space перестановок}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce38a4d8",
+   "metadata": {},
+   "source": [
+    "**Тренировочная задача №6**\n",
+    "\n",
+    "Возьмём условие **тренировочной задачи №5**, но теперь для сравнения используем **Бутстрап и Тест перестановок**.\n",
+    "\n",
+    "**Условие:** мы проверяем эффективность Push-уведомления. Целевым действием является подписка на сервис в течение трёх дней. Мы разделили сегмент на две группы, экспериментальную и контрольную, размер каждой - 1 тысяча клиентов. Экспериментальная группа получила Push-уведомление, контрольная - ничего не получала. После проведения эксперимента мы измерили количество клиентов, подписавшихся на сервис: в контрольной группе оно составило 8 клиентов, а в экспериментальной - 21 клиент.\n",
+    "\n",
+    "**Задача:** сравнить конверисю в экспериментальной группе ($p_1$) с конверсией в контрольной группе ($p_2$) при помощи **Бутстрапа и Теста перестановок** и сделать вывод о том значимы ли различия на уровне значимости $alpha = 0.05$\n",
+    "\n",
+    "Проверяемые гипотезы (двусторонняя гипотеза, $p_1$ не равна $p_2$):\n",
+    "$$\n",
+    "H_0: p_1 = p_2 \\\\\n",
+    "H_1: p_1 <> p_2 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $p_1$ больше $p_2$):\n",
+    "$$\n",
+    "H_0: p_1 \\le p_2 \\\\\n",
+    "H_1: p_1 > p_2 \\\\\n",
+    "$$\n",
+    "\n",
+    "Проверяемые гипотезы (односторонняя гипотеза, $p_1$ меньше $p_2$):\n",
+    "$$\n",
+    "H_0: p_1 \\ge p_2 \\\\\n",
+    "H_1: p_1 < p_2 \\\\\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "518103aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ab_utils.bootstrap import permutation_test_pvalue"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "29dc3542",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Конверсия в экспериментальной группе: 2.1%\n",
+      "Конверсия в контрольной группе (H0): 0.8%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = 1000          # количество пользователей (испытаний) в экспериментальной группе\n",
+    "n2 = 1000          # количество пользователей (испытаний) в контрольной группе\n",
+    "\n",
+    "x1 = 21            # количество успехов в экспериментальной группе\n",
+    "x2 = 8             # количество успехов в контрольной группе\n",
+    "alpha = 0.05       # уровень значимости alpha\n",
+    "\n",
+    "p1 = float(x1) / n1     # Конверсия в экспериментальной группе\n",
+    "p2 = float(x2) / n2     # Конверсия в контрольной группе\n",
+    "\n",
+    "x1_arr = np.zeros(n1)\n",
+    "x1_arr[:x1] = 1\n",
+    "\n",
+    "x2_arr = np.zeros(n2)\n",
+    "x2_arr[:x2] = 1\n",
+    "\n",
+    "print(f\"Конверсия в экспериментальной группе: {p1:.1%}\")\n",
+    "print(f\"Конверсия в контрольной группе (H0): {p2:.1%}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5032f577",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Альтернатива: two-sided\n",
+      "p-value (perm test):  0.023500; Гипотеза H_0 (p_1 2.1% равна p_2 0.8%) отвергается на уровне 0.05 в пользу H_1 (p_1 2.1% НЕ равна p_2 0.8%): да\n",
+      "\n",
+      "Альтернатива: less\n",
+      "p-value (perm test):  0.995000; Гипотеза H_0 (p_1 2.1% больше либо равна p_2 0.8%) отвергается на уровне 0.05 в пользу H_1 (p_1 2.1% меньше p_2 0.8%): нет\n",
+      "\n",
+      "Альтернатива: greater\n",
+      "p-value (perm test):  0.012800; Гипотеза H_0 (p_1 2.1% меньше либо равна p_2 0.8%) отвергается на уровне 0.05 в пользу H_1 (p_1 2.1% больше p_2 0.8%): да\n"
+     ]
+    }
+   ],
+   "source": [
+    "alt_to_h_zero = {\n",
+    "    'two-sided': f'p_1 {round(p1 * 100.0, 1)}% равна p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'less': f'p_1 {round(p1 * 100.0, 1)}% больше либо равна p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'greater': f'p_1 {round(p1 * 100.0, 1)}% меньше либо равна p_2 {round(p2 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "alt_to_h_one = {\n",
+    "    'two-sided': f'p_1 {round(p1 * 100.0, 1)}% НЕ равна p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'less': f'p_1 {round(p1 * 100.0, 1)}% меньше p_2 {round(p2 * 100.0, 1)}%',\n",
+    "    'greater': f'p_1 {round(p1 * 100.0, 1)}% больше p_2 {round(p2 * 100.0, 1)}%'\n",
+    "}\n",
+    "\n",
+    "for alt in ['two-sided', 'less', 'greater']:\n",
+    "    p_manual, T_obs, T_stats = permutation_test_pvalue(\n",
+    "        x = x1_arr,\n",
+    "        y = x2_arr,\n",
+    "        metric_func = np.mean,\n",
+    "        reps = 10000,\n",
+    "        alternative = alt\n",
+    "    )\n",
+    "\n",
+    "    print(f\"\\nАльтернатива: {alt}\")\n",
+    "    print(f\"p-value (perm test):  {p_manual:.6f}; Гипотеза H_0 ({alt_to_h_zero[alt]}) отвергается на уровне {alpha} в пользу H_1 ({alt_to_h_one[alt]}): {'да' if p_manual < alpha else 'нет'}\")"
+   ]
   },
   {
    "cell_type": "markdown",
